[gd_scene load_steps=8 format=3 uid="uid://tgifnen2rjnv"]

[ext_resource type="Script" path="res://Scripts/Turret.gd" id="1_tt0nv"]
[ext_resource type="Texture2D" uid="uid://bvv2ixc60sivy" path="res://Assets/Enemy/boundturret.png" id="2_j7asn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_km715"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_00c7p"]
size = Vector2(264, 32)

[sub_resource type="Animation" id="Animation_0w3ex"]
resource_name = "Shoot"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="Animation" id="Animation_i3nyx"]
resource_name = "Idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lfrnt"]
_data = {
"Idle": SubResource("Animation_i3nyx"),
"Shoot": SubResource("Animation_0w3ex")
}

[node name="Turret" type="CharacterBody2D"]
position = Vector2(1, 0)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_tt0nv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(118, -24)
texture = ExtResource("2_j7asn")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(119, -22)
shape = SubResource("RectangleShape2D_km715")

[node name="detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect"]
position = Vector2(42, -22)
shape = SubResource("RectangleShape2D_00c7p")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(113, -21)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lfrnt")
}

[connection signal="body_entered" from="detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="detect" to="." method="_on_detect_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
